--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 half steps<br>
 <br>
-・ツイートボタン<br>
+<a href="tweetbutton.html">・ツイートボタン</a><br>
 ・簿記3級　学習サイト予定<br>
 ・税理士試験_簿記論 学習サイト予定<br>
   
