--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 half steps<br>
 <br>
 <a href="tweet-button.html">・ツイートボタン</a><br>
-・簿記3級　学習サイト予定<br>
-・税理士試験_簿記論 学習サイト予定<br>
+<a href="boki3.html>・簿記3級　学習サイト予定</a><br>
+<a href="bokiron.html>・税理士試験_簿記論 学習サイト予定</a><br>
   <br>
   <br>
   ・FP3級<br>
