--- a/bokiron.html
+++ b/bokiron.html
@@ -13,7 +13,13 @@
   </style>
 </head>
 <body>
-税理士試験 簿記論 予定
+税理士試験 簿記論 学習サイト 予定<br>
+  <br>
+  <br>
+  ○収益認識<br>
+  <br>
+  <br>
+  ○外貨建取引
 
 </body>
 </html>
