--- a/bokiron.html
+++ b/bokiron.html
@@ -21,6 +21,14 @@
   ・圧縮記帳<br>
   <br>
   ○外貨建取引<br>
+  <br>
+  <br>
+  ★ミスノート<br>
+  <br>
+  ・備品購入の未払金が\1,000,000,利息相当額が\100,000,<br>
+  　未払金は利息相当額を含む、当期に属する利息相当額は40%,翌期分は60%<br>
+  <br>
+  
 
 </body>
 </html>
