--- a/bokiron.html
+++ b/bokiron.html
@@ -17,12 +17,27 @@
   <br>
   <br>
   ○収益認識<br>
+  ・収益認識の基本、リベート<br>
+  ・返品権付き販売<br>
   ・自社ポイント<br>
   ・他社ポイント<br>
-  ・返品権付き販売<br>
+  <br>
+  ・工事契約<br>
+　<br>
+  ○特殊商品売買<br>
+  ・割賦販売<br>
+  ・未着品売買<br>
+  ・試用販売<br>
+  ・委託販売<br>
+  ・受託販売<br>
+  <br>
+  
+
   
   <br>
   ・圧縮記帳<br>
+  　・<br>
+  　・<br>
   <br>
   ○外貨建取引<br>
   <br>
